[JENKINS-72203] Revert jenkinsci/jenkins#8565 (#8637)
This reverts commit dc190bac8a6712ae5313aa1b5ccb123f11f269e3.